include/flow_ffi.h

// Error codes
typedef enum FlowError {
    FLOW_SUCCESS = 0,
    FLOW_ERROR_INVALID_HANDLE = -1,
    FLOW_ERROR_INVALID_ARGUMENT = -2,
    FLOW_ERROR_NODE_NOT_FOUND = -3,
    FLOW_ERROR_PORT_NOT_FOUND = -4,
    FLOW_ERROR_CONNECTION_FAILED = -5,
    FLOW_ERROR_MODULE_LOAD_FAILED = -6,
    FLOW_ERROR_COMPUTATION_FAILED = -7,
    FLOW_ERROR_OUT_OF_MEMORY = -8,
    FLOW_ERROR_TYPE_MISMATCH = -9,
    FLOW_ERROR_NOT_IMPLEMENTED = -10,
    FLOW_ERROR_UNKNOWN = -999
} FlowError;
// Opaque handle types
typedef struct FlowGraph* FlowGraphHandle;
typedef struct FlowNode* FlowNodeHandle;
typedef struct FlowNodeData* FlowNodeDataHandle;
// Connection information for graph connection queries
typedef struct FlowConnectionInfo {
    const char* id;
    const char* source_node_id;
    const char* source_port_key;
    const char* target_node_id;
    const char* target_port_key;
} FlowConnectionInfo;
// Disconnect nodes
FLOW_FFI_EXPORT FlowError flow_graph_disconnect_nodes(FlowGraphHandle graph,
                                                      const char* connection_id);
// Get all connections in the graph
FLOW_FFI_EXPORT FlowError flow_graph_get_connections(FlowGraphHandle graph,
                                                     FlowConnectionInfo** connections,
                                                     size_t* count);
// Check if two nodes can be connected
FLOW_FFI_EXPORT bool flow_graph_can_connect(FlowGraphHandle graph, const char* source_id,
                                            const char* source_port, const char* target_id,
                                            const char* target_port);
// Run the graph
FLOW_FFI_EXPORT FlowError flow_graph_run(FlowGraphHandle graph);
// Clear all nodes and connections
FLOW_FFI_EXPORT FlowError flow_graph_clear(FlowGraphHandle graph);
// Serialization
FLOW_FFI_EXPORT char* flow_graph_save_to_json(FlowGraphHandle graph);
FLOW_FFI_EXPORT FlowError flow_graph_load_from_json(FlowGraphHandle graph, const char* json);
// Node serialization
FLOW_FFI_EXPORT char* flow_node_save_to_json(FlowNodeHandle node);
FLOW_FFI_EXPORT FlowError flow_node_load_from_json(FlowNodeHandle node, const char* json_str);
// ============================================================================
// Node Management
// ============================================================================

// Get node properties
FLOW_FFI_EXPORT const char* flow_node_get_id(FlowNodeHandle node);
FLOW_FFI_EXPORT const char* flow_node_get_name(FlowNodeHandle node);
FLOW_FFI_EXPORT const char* flow_node_get_class(FlowNodeHandle node);
// Set node name
FLOW_FFI_EXPORT FlowError flow_node_set_name(FlowNodeHandle node, const char* name);
// Port data management
FLOW_FFI_EXPORT FlowError flow_node_set_input_data(FlowNodeHandle node, const char* port_key,
                                                   FlowNodeDataHandle data);
FLOW_FFI_EXPORT FlowNodeDataHandle flow_node_get_input_data(FlowNodeHandle node,
                                                            const char* port_key);
FLOW_FFI_EXPORT FlowNodeDataHandle flow_node_get_output_data(FlowNodeHandle node,
                                                             const char* port_key);
FLOW_FFI_EXPORT FlowError flow_node_clear_input_data(FlowNodeHandle node, const char* port_key);
FLOW_FFI_EXPORT FlowError flow_node_clear_output_data(FlowNodeHandle node, const char* port_key);
// Computation
FLOW_FFI_EXPORT FlowError flow_node_invoke_compute(FlowNodeHandle node);
FLOW_FFI_EXPORT bool flow_node_validate_required_inputs(FlowNodeHandle node);
// Lifecycle (Start/Stop hooks).  Mirrors flow-core's Node::Start() and
// Node::Stop().  The framework calls Stop() automatically inside
// flow_graph_remove_node; Start() is explicitly opt-in by the embedder
// (flow-ui's convention; see FLOW_RUN.html §10.10).  Default no-op
// implementations always return FLOW_SUCCESS.  Double-call is safe.
FLOW_FFI_EXPORT FlowError flow_node_start(FlowNodeHandle node);
FLOW_FFI_EXPORT FlowError flow_node_stop(FlowNodeHandle node);
// Connection status
FLOW_FFI_EXPORT bool flow_node_has_connected_inputs(FlowNodeHandle node);
FLOW_FFI_EXPORT bool flow_node_has_connected_outputs(FlowNodeHandle node);