dart_package/lib/src/ffi/bindings_generated.dart


  int flow_graph_disconnect_nodes(
    FlowGraphHandle graph,
    ffi.Pointer<ffi.Char> connection_id,
  ) {
    return _flow_graph_disconnect_nodes(
      graph,
      connection_id,
    );
  }

  late final _flow_graph_disconnect_nodesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(FlowGraphHandle,
              ffi.Pointer<ffi.Char>)>>('flow_graph_disconnect_nodes');
  late final _flow_graph_disconnect_nodes = _flow_graph_disconnect_nodesPtr
      .asFunction<int Function(FlowGraphHandle, ffi.Pointer<ffi.Char>)>();

  int flow_graph_get_connections(
    FlowGraphHandle graph,
    ffi.Pointer<ffi.Pointer<FlowConnectionInfo>> connections,
    ffi.Pointer<ffi.Size> count,
  ) {
    return _flow_graph_get_connections(
      graph,
      connections,
      count,
    );
  }

  late final _flow_graph_get_connectionsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              FlowGraphHandle,
              ffi.Pointer<ffi.Pointer<FlowConnectionInfo>>,
              ffi.Pointer<ffi.Size>)>>('flow_graph_get_connections');
  late final _flow_graph_get_connections =
      _flow_graph_get_connectionsPtr.asFunction<
          int Function(
              FlowGraphHandle,
              ffi.Pointer<ffi.Pointer<FlowConnectionInfo>>,
              ffi.Pointer<ffi.Size>)>();

  bool flow_graph_can_connect(
    FlowGraphHandle graph,
    ffi.Pointer<ffi.Char> source_id,
    ffi.Pointer<ffi.Char> source_port,
    ffi.Pointer<ffi.Char> target_id,
    ffi.Pointer<ffi.Char> target_port,
  ) {
    return _flow_graph_can_connect(
      graph,
      source_id,
      source_port,
      target_id,
      target_port,
    );
  }

  late final _flow_graph_can_connectPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(
              FlowGraphHandle,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('flow_graph_can_connect');
  late final _flow_graph_can_connect = _flow_graph_can_connectPtr.asFunction<
      bool Function(
          FlowGraphHandle,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  int flow_graph_run(
    FlowGraphHandle graph,
  ) {
    return _flow_graph_run(
      graph,
    );
  }

  late final _flow_graph_runPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(FlowGraphHandle)>>(
          'flow_graph_run');
  late final _flow_graph_run =
      _flow_graph_runPtr.asFunction<int Function(FlowGraphHandle)>();

  int flow_graph_clear(
    FlowGraphHandle graph,
  ) {
    return _flow_graph_clear(
      graph,
    );
  }

  late final _flow_graph_clearPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(FlowGraphHandle)>>(
          'flow_graph_clear');
  late final _flow_graph_clear =
      _flow_graph_clearPtr.asFunction<int Function(FlowGraphHandle)>();

  ffi.Pointer<ffi.Char> flow_graph_save_to_json(
    FlowGraphHandle graph,
  ) {
    return _flow_graph_save_to_json(
      graph,
    );
  }

  late final _flow_graph_save_to_jsonPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(FlowGraphHandle)>>(
      'flow_graph_save_to_json');
  late final _flow_graph_save_to_json = _flow_graph_save_to_jsonPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(FlowGraphHandle)>();

  int flow_graph_load_from_json(
    FlowGraphHandle graph,
    ffi.Pointer<ffi.Char> json,
  ) {
    return _flow_graph_load_from_json(
      graph,
      json,
    );
  }

  late final _flow_graph_load_from_jsonPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(FlowGraphHandle,
              ffi.Pointer<ffi.Char>)>>('flow_graph_load_from_json');
  late final _flow_graph_load_from_json = _flow_graph_load_from_jsonPtr
      .asFunction<int Function(FlowGraphHandle, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> flow_node_save_to_json(
    FlowNodeHandle node,
  ) {
    return _flow_node_save_to_json(
      node,
    );
  }

  late final _flow_node_save_to_jsonPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(FlowNodeHandle)>>(
      'flow_node_save_to_json');
  late final _flow_node_save_to_json = _flow_node_save_to_jsonPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(FlowNodeHandle)>();

  int flow_node_load_from_json(
    FlowNodeHandle node,
    ffi.Pointer<ffi.Char> json_str,
  ) {
    return _flow_node_load_from_json(
      node,
      json_str,
    );
  }

  late final _flow_node_load_from_jsonPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(FlowNodeHandle,
              ffi.Pointer<ffi.Char>)>>('flow_node_load_from_json');
  late final _flow_node_load_from_json = _flow_node_load_from_jsonPtr
      .asFunction<int Function(FlowNodeHandle, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> flow_node_get_id(
    FlowNodeHandle node,
  ) {
    return _flow_node_get_id(
      node,
    );
  }

  late final _flow_node_get_idPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(FlowNodeHandle)>>(
      'flow_node_get_id');
  late final _flow_node_get_id = _flow_node_get_idPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(FlowNodeHandle)>();

  ffi.Pointer<ffi.Char> flow_node_get_name(
    FlowNodeHandle node,
  ) {
    return _flow_node_get_name(
      node,
    );
  }

  late final _flow_node_get_namePtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(FlowNodeHandle)>>(
      'flow_node_get_name');
  late final _flow_node_get_name = _flow_node_get_namePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(FlowNodeHandle)>();

  ffi.Pointer<ffi.Char> flow_node_get_class(
    FlowNodeHandle node,
  ) {
    return _flow_node_get_class(
      node,
    );
  }

  late final _flow_node_get_classPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(FlowNodeHandle)>>(
      'flow_node_get_class');
  late final _flow_node_get_class = _flow_node_get_classPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(FlowNodeHandle)>();

  int flow_node_set_name(
    FlowNodeHandle node,
    ffi.Pointer<ffi.Char> name,
  ) {
    return _flow_node_set_name(
      node,
      name,
    );
  }

  late final _flow_node_set_namePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              FlowNodeHandle, ffi.Pointer<ffi.Char>)>>('flow_node_set_name');
  late final _flow_node_set_name = _flow_node_set_namePtr
      .asFunction<int Function(FlowNodeHandle, ffi.Pointer<ffi.Char>)>();

  int flow_node_set_input_data(
    FlowNodeHandle node,
    ffi.Pointer<ffi.Char> port_key,
    FlowNodeDataHandle data,
  ) {
    return _flow_node_set_input_data(
      node,
      port_key,
      data,
    );
  }

  late final _flow_node_set_input_dataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(FlowNodeHandle, ffi.Pointer<ffi.Char>,
              FlowNodeDataHandle)>>('flow_node_set_input_data');
  late final _flow_node_set_input_data =
      _flow_node_set_input_dataPtr.asFunction<
          int Function(
              FlowNodeHandle, ffi.Pointer<ffi.Char>, FlowNodeDataHandle)>();

  FlowNodeDataHandle flow_node_get_input_data(
    FlowNodeHandle node,
    ffi.Pointer<ffi.Char> port_key,
  ) {
    return _flow_node_get_input_data(
      node,
      port_key,
    );
  }

  late final _flow_node_get_input_dataPtr = _lookup<
      ffi.NativeFunction<
          FlowNodeDataHandle Function(FlowNodeHandle,
              ffi.Pointer<ffi.Char>)>>('flow_node_get_input_data');
  late final _flow_node_get_input_data =
      _flow_node_get_input_dataPtr.asFunction<
          FlowNodeDataHandle Function(FlowNodeHandle, ffi.Pointer<ffi.Char>)>();

  FlowNodeDataHandle flow_node_get_output_data(
    FlowNodeHandle node,
    ffi.Pointer<ffi.Char> port_key,
  ) {
    return _flow_node_get_output_data(
      node,
      port_key,
    );
  }

  late final _flow_node_get_output_dataPtr = _lookup<
      ffi.NativeFunction<
          FlowNodeDataHandle Function(FlowNodeHandle,
              ffi.Pointer<ffi.Char>)>>('flow_node_get_output_data');
  late final _flow_node_get_output_data =
      _flow_node_get_output_dataPtr.asFunction<
          FlowNodeDataHandle Function(FlowNodeHandle, ffi.Pointer<ffi.Char>)>();

  int flow_node_clear_input_data(
    FlowNodeHandle node,
    ffi.Pointer<ffi.Char> port_key,
  ) {
    return _flow_node_clear_input_data(
      node,
      port_key,
    );
  }

  late final _flow_node_clear_input_dataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(FlowNodeHandle,
              ffi.Pointer<ffi.Char>)>>('flow_node_clear_input_data');
  late final _flow_node_clear_input_data = _flow_node_clear_input_dataPtr
      .asFunction<int Function(FlowNodeHandle, ffi.Pointer<ffi.Char>)>();

  int flow_node_clear_output_data(
    FlowNodeHandle node,
    ffi.Pointer<ffi.Char> port_key,
  ) {
    return _flow_node_clear_output_data(
      node,
      port_key,
    );
  }

  late final _flow_node_clear_output_dataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(FlowNodeHandle,
              ffi.Pointer<ffi.Char>)>>('flow_node_clear_output_data');
  late final _flow_node_clear_output_data = _flow_node_clear_output_dataPtr
      .asFunction<int Function(FlowNodeHandle, ffi.Pointer<ffi.Char>)>();

  int flow_node_invoke_compute(
    FlowNodeHandle node,
  ) {
    return _flow_node_invoke_compute(
      node,
    );
  }

  late final _flow_node_invoke_computePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(FlowNodeHandle)>>(
          'flow_node_invoke_compute');
  late final _flow_node_invoke_compute =
      _flow_node_invoke_computePtr.asFunction<int Function(FlowNodeHandle)>();

  bool flow_node_validate_required_inputs(
    FlowNodeHandle node,
  ) {
    return _flow_node_validate_required_inputs(
      node,
    );
  }

  late final _flow_node_validate_required_inputsPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(FlowNodeHandle)>>(
          'flow_node_validate_required_inputs');
  late final _flow_node_validate_required_inputs =
      _flow_node_validate_required_inputsPtr
          .asFunction<bool Function(FlowNodeHandle)>();

  int flow_node_start(
    FlowNodeHandle node,
  ) {
    return _flow_node_start(
      node,
    );
  }

  late final _flow_node_startPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(FlowNodeHandle)>>(
          'flow_node_start');
  late final _flow_node_start =
      _flow_node_startPtr.asFunction<int Function(FlowNodeHandle)>();

  int flow_node_stop(
    FlowNodeHandle node,
  ) {
    return _flow_node_stop(
      node,
    );
  }

  late final _flow_node_stopPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(FlowNodeHandle)>>(
          'flow_node_stop');
  late final _flow_node_stop =
      _flow_node_stopPtr.asFunction<int Function(FlowNodeHandle)>();

  bool flow_node_has_connected_inputs(
    FlowNodeHandle node,
  ) {
    return _flow_node_has_connected_inputs(
      node,
    );
  }

  late final _flow_node_has_connected_inputsPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(FlowNodeHandle)>>(
          'flow_node_has_connected_inputs');
  late final _flow_node_has_connected_inputs =
      _flow_node_has_connected_inputsPtr
          .asFunction<bool Function(FlowNodeHandle)>();

  bool flow_node_has_connected_outputs(
    FlowNodeHandle node,
  ) {
    return _flow_node_has_connected_outputs(
      node,
    );
  }

  late final _flow_node_has_connected_outputsPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(FlowNodeHandle)>>(
          'flow_node_has_connected_outputs');
  late final _flow_node_has_connected_outputs =
      _flow_node_has_connected_outputsPtr
          .asFunction<bool Function(FlowNodeHandle)>();
